test/src/e2e_vm_tests/test_programs/should_pass/language/associated_const_impl_method/src/main.sw
script;

struct Struct { }

impl Struct {
    const ID: u64 = 1;

    fn foo(self) -> u64 {
        Self::ID
    }
}

fn main() -> u64 {
  let s = Struct {};
  s.foo()
}
